tests/ui/cilk/cilk_spawn_break_error.stderr
error: cannot use `break` within cilk_spawn
  --> $DIR/cilk_spawn_break_error.rs:10:13
   |
LL |             break;
   |             ^^^^^

error: aborting due to 1 previous error

